--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
       <div class="scoreNum"></div>
     </div>
 
-    <script src="main.js" />
+    <script type="module" src="main.js" />
   </body>
 </html>
