--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   </head>
 
   <body>
-    <div id="test">
-      <div id="text">
-        <!-- <div class="word">
+    <div class="container">
+      <div id="start"><button id="startButton">Start</button></div>
+      <div id="test">
+        <div id="text">
+          <!-- <div class="word">
           <span class="letter">A</span>
           <span class="letter letterCorrect">A</span>
           <span class="letter letterWrong">A</span>
@@ -20,12 +22,12 @@
           <span class="letter letterWrong">A</span>
         </div>
         <div class="space">&ensp;</div> -->
+        </div>
       </div>
-    </div>
 
-    <div id="score">
-      <div class="scoreText">Score :</div>
-      <div class="scoreNum"></div>
+      <div id="score" class="score">
+        <span id="scoreNum"></span>
+      </div>
     </div>
 
     <script type="module" src="main.js" />
