--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
     <div class="container">
-      <div id="start"><button id="startButton">Start</button></div>
+      <div id="start" class = "countdown"><button id="startButton" class = "button">START</button></div>
       <div id="test">
         <div id="text">
           <!-- <div class="word">
@@ -26,7 +26,7 @@
       </div>
 
       <div id="score" class="score">
-        <span id="scoreNum"></span>
+        <span id="scoreNum" class = "score"></span>
       </div>
     </div>
 
