--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
   <body>
     <div class="container">
-      <div id="start" class = "countdown"><button id="startButton" class = "button">START</button></div>
+      <div id="start" class="countdown">
+        <button id="startButton" class="button">START</button>
+      </div>
       <div id="test">
         <div id="text">
           <!-- <div class="word">
@@ -26,7 +28,7 @@
       </div>
 
       <div id="score" class="score">
-        <span id="scoreNum" class = "score"></span>
+        <span id="scoreNum" class="score"></span>
       </div>
     </div>
 
